# flex

./: .gitignore  LICENSE  Makefile  README.md  bump.sh  install.sh  publish.sh  pyproject.toml
.github/workflows/: build-mac.yml  ci.yml
claude/agents/: flex-agent.md  flx-trace.md
docs/claude_code/: README.md
flex/: cli.py  core.py  mcp_server.py  mcp_server.service  registry.py
flex/compile/: docpac.py  markdown.py
flex/manage/: install_presets.py  meditate.py
flex/onnx/: __init__.py  embed.py  fetch.py  nomic_embed.py
flex/retrieve/: presets.py  score.py  vec_ops.py
flex/utils/: install_presets.py
flexsearch/: __init__.py  cli.py  core.py  mcp_server.py  mcp_server.service  meditate.py  presets.py  registry.py  vec_search.py  views.py
flexsearch/compile/: docpac.py
flexsearch/manage/: meditate.py
flexsearch/onnx/: embed.py
flexsearch/retrieve/: presets.py  vec_ops.py  vec_search.py
flexsearch/utils/: git.py  install_presets.py
operations/17b9ea9f-4919-4845-95ac-a9f7544ef92e/: 2026-02-17T1540-drop-enrich-types.sql
operations/2ac5c1bc-2bfd-41cf-a2c1-eda9ec6b7bfc/: 2026-02-17T1540-drop-enrich-types.sql
operations/443f6b1f-b4bc-49af-aa53-859bd799e2fc/: 2026-02-17T1540-drop-enrich-types.sql
operations/4efbcceb-f5ca-4529-bff8-3105c11d0325/: 2026-02-17T1540-drop-enrich-types.sql  2026-02-17T1600-standardize-cell-descriptions.sql
operations/c2c785f9-fe03-44e4-996f-a1fb216d1d10/: 2026-02-17T1400-plan7-clean-meta-view-keys.sql  2026-02-17T1540-drop-enrich-types.sql
operations/d9ca9afd-5445-4762-bcdb-091a858ae5da/: 2026-02-17T1540-drop-enrich-types.sql  2026-02-18T1500-drop-enrich-session-profile.sql
operations/e7547b39-8e64-47b4-aa4d-7efedac0f9b6/: 2026-02-17T1540-drop-enrich-types.sql  2026-02-17T1700-plan9-drain-enrich-types.sql  2026-02-17T1710-plan9-clean-stale-meta-keys.sql  2026-02-19T1400-soma-add-old-blob-hash.sql  2026-02-19T1530-unified-write-path-schema.sql
scripts/: backfill_agent_type.py  enrich_delegation_graph.py  enrich_file_graph.py  enrich_session_profile.py  enrich_session_summary.py  init-docpac.py  migrate_claude.py  migrate_presets.py  migrate_registry.py  migrate_thread_test.py  mirror_assets.py  plan45_execute.py  rebuild_enrichments.py  reembed_nomic.py
shim/: pyproject.toml
tests/: conftest.py  test_core.py  test_delegations.py  test_docpac.py  test_docpac_worker.py  test_fingerprint.py  test_init_e2e.py  test_init_pipeline.py  test_init_schema.py  test_keyword.py  test_markdown.py  test_meditate.py  test_presets.py  test_presets_security.py  test_registry.py  test_schema_contract.py  test_soma_module.py  test_unified_sync.py  test_vec_ops.py  test_vec_search.py
tests/docker/: Dockerfile.demo  Dockerfile.dev  Dockerfile.dirty-conda  Dockerfile.e2e  Dockerfile.install  Dockerfile.upgrade  demo-entry.sh  flex-serve.sh  harness.py  prep-sessions.sh  run_all.py  run_dirty.py  run_e2e.py  run_install.py  run_install_degraded.py  run_mcp_claude.py  (+3 more)
(+99 files in other folders)
