[project]
name = "getflex"
version = "0.1.2"
description = "SQLite knowledge engine for AI Agents"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "networkx",
    "scikit-learn",
    "onnxruntime",
    "tokenizers",
]

[project.optional-dependencies]
mcp = ["mcp", "starlette", "uvicorn"]
cluster = ["hdbscan"]

[project.scripts]
flex = "flex.cli:main"

[tool.setuptools.package-data]
flex = [
    "modules/claude_code/compile/hooks/*.sh",
    "data/hooks/*.sh",
    "data/systemd/*.tmpl",
    "onnx/*.json",
    "onnx/vocab.txt",
]

[tool.setuptools.packages.find]
include = ["flex*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
