[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getflex"
version = "0.7.0"
description = "getflex has moved — install via https://getflex.dev"
license = { text = "MIT" }
requires-python = ">=3.10"
# Zero dependencies — this is a redirect shim

[project.scripts]
flex = "flex.cli:main"

[tool.setuptools.packages.find]
include = ["flex*"]
